[package]
name = "rregistry"
version = "0.0.1"
authors = ["Flávio Siqueira Prado"]
edition = "2018"
license = "Apache-2.0"
description = "A container registry built using the OCI Distribution specification"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bincode = "1.3.3"
r2d2 = "0.8.9"
redis = { version = "0.21.2", features = ["tokio-comp", "tokio-native-tls-comp", "r2d2"] }
regex = "1.5.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }

[dev-dependencies]
portpicker = "0.1.1"
testcontainers = "0.12.0"
